--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
-name = "mini-avito"
+name = "с05-hw27-django_app"
 version = "0.1.0"
 description = ""
-authors = ["Danil Mirosh <miroshnichenko.da.vi@mail.ru>"]
-readme = "README.md"
-packages = [{include = "mini_avito"}]
+authors = ["kpaveliev <kpaveliev@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django = "^4.1.3"
-psycopg2 = "^2.9.5"
-pillow = "^9.3.0"
+Django = "^4.1"
+psycopg2 = "^2.9.3"
+Pillow = "^9.2.0"
 
+[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
